@@ -7,16 +7,16 @@
   "KSP_VERSION": {
     "MAJOR": 1,
     "MINOR": 2,
-    "PATCH": 1
+    "PATCH": 2
   },
   "KSP_VERSION_MIN": {
     "MAJOR": 1,
     "MINOR": 2,
-    "PATCH": 0
+    "PATCH": 2
   },
   "KSP_VERSION_MAX": {
     "MAJOR": 1,
     "MINOR": 2,
-    "PATCH": 1
+    "PATCH": 2
   }
 }
