@@ -1,3 +1,3 @@
-﻿You have installed the TAC Life Support, version 0.12.7.0 ('70095e5'+'70095e5' with modifications).
+﻿You have installed the TAC Life Support, version 0.12.7.0 ('4fb7507'+'4fb7507' with modifications).
 
 See the Readme.txt and LICENSE.txt files for more information.
