@@ -38,9 +38,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\KSPDLLs - 1.2\Assembly-CSharp.dll</HintPath>
     </Reference>
-    <Reference Include="RSTKSPGameEvents">
-      <HintPath>..\..\REPOSoftTechKSPUtils\RSTKSPGameEvents\bin\Debug\RSTKSPGameEvents.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -129,13 +126,13 @@
     <ChangelogUrl>https://github.com/KSP-RO/TacLifeSupport/wiki/Changes</ChangelogUrl>
     <KspVersionMajor>1</KspVersionMajor>
     <KspVersionMinor>2</KspVersionMinor>
-    <KspVersionPatch>1</KspVersionPatch>
+    <KspVersionPatch>2</KspVersionPatch>
     <KspMinVersionMajor>1</KspMinVersionMajor>
     <KspMinVersionMinor>2</KspMinVersionMinor>
-    <KspMinVersionPatch>0</KspMinVersionPatch>
+    <KspMinVersionPatch>2</KspMinVersionPatch>
     <KspMaxVersionMajor>1</KspMaxVersionMajor>
     <KspMaxVersionMinor>2</KspMaxVersionMinor>
-    <KspMaxVersionPatch>1</KspMaxVersionPatch>
+    <KspMaxVersionPatch>2</KspMaxVersionPatch>
   </PropertyGroup>
   <Target Name="GitInfo">
     <!-- Get the current git SHA1 -->
